# BGSA

./: README.md  _config.yml
BGSA_AVX2/: Makefile  align_core.c  align_core.h  aligner  cal_avx.c  config.h  global.c  global.h  main.c  util.h
BGSA_AVX2/sample-data/: query.txt
BGSA_AVX512/: align_core.c  aligner  cal_mic.c  config.h  global.c  global.h  main.c  thread.h
BGSA_AVX512/sample-data/: subject.txt
BGSA_CPU/: Makefile  align_core.c  aligner  cal_cpu.c  config.h  convert  convert.c  global.c  global.h  main.c  thread.c  util.c  util.h
BGSA_KNC/: Makefile  README.md  align_core.c  aligner  cal_all.c  cal_cpu.c  cal_mic.c  cal_sse.c  config.h  global.c  global.h  main.c  thread.c  thread.h
BGSA_SSE/: Makefile  align_core.c  aligner  cal.h  cal_sse.c  config.h  global.c  global.h  main.c  thread.h  util.c
BGSA_SSE/sample-data/: subject.txt
banded/BGSA_AVX2/: Makefile  align_core.c  aligner  cal.h  cal_avx.c  config.h  cp.sh  file.c  global.c  global.h  main.c  thread.c  thread.h
banded/BGSA_AVX512/: Makefile  align_core.c  aligner  cal_mic.c  config.h  convert  convert.c  global.c  global.h  main.c  thread.c  timer.h
banded/BGSA_CPU/: .gitignore  Makefile  align_core.c  align_core.h  aligner  cal.h  cal_cpu.c  config.h  convert  file.c  global.c  global.h  main.c  tags  thread.h
original/BGSA_AVX512/: CMakeLists.txt  Makefile  align_core.c  align_core.h  aligner  cal.h  cal_mic.c  config.h  convert  file.c  global.c  global.h  main.c  readme.md  thread.c  util.c  util.h
original/BGSA_AVX512/sample-data/: query.txt  subject.txt
(+111 files in other folders)
